# crdt-crm

./: .gitignore  LICENSE  README.md  metadata.json
contacts/: Cargo.toml
contacts/src/: api.rs  contact_book.rs  frontend.rs  lib.rs  request.rs  response.rs  state.rs  types.rs
pkg/: manifest.json
pkg/ui/: index.html  script.js  style.css
