[package]
name = "contacts"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
automerge = "0.5.9"
autosurgeon = "0.8.3"
bincode = "1.3.3"
# kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.7.0" }
kinode_process_lib = { path = "../../../process_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
